# crc2024

./: docker-compose.yaml  gunicorn_config.py  locustfile.py  pyproject.toml  requirements.txt
app/: crud.py  db.py  logging.yml  main.py  models.py  schemas.py  settings.py
app/migrations/: env.py
app/migrations/versions/: f490a97d8de7_init_migration.py
app/routers/: applications.py  healthz.py
docs/: home.md
postgres/: applications.sql
systemd/: crcapi.service  locust-stress.service  locust-stress.timer  locust.service  locust.timer
