[project]
name = "crc-api"
version = "0.1.0"
description = "Educational API for Corporate Readiness Certificate (CRC)"
dependencies = [
    "fastapi>=0.110.0",
    "sqlalchemy[asyncio]>=2.0.28",
    "pydantic-settings>=2.2.1",
    "alembic>=1.13.1",
    "asyncpg>=0.29.0",
    "uvicorn>=0.28.1",
    "gunicorn>=21.2.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "pyyaml>=6.0.1",
    "locust>=2.24.1",
]
requires-python = "==3.11.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false

[tool.pdm.scripts]
start = "python ./app/main.py"

[tool.locust]
locustfile = "locustfile.py"
headless = true
host = "http://localhost:8080"
users = 10
spawn-rate = 50
run-time = "270s"
only-summary = true
exit-code-on-error = 0
